apps/adguard-home-test-1/templates/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.50
          ports:
            - protocol: TCP
              containerPort: 3000
              name: http-setup
            - protocol: TCP
              containerPort: 80
              name: http
            - protocol: UDP
              containerPort: 53
              name: dns-udp
            - protocol: TCP
              containerPort: 53
              name: dns-tcp
            - protocol: TCP
              containerPort: 853
              name: dns-tls
            - protocol: UDP
              containerPort: 784
              name: dns-quic
          volumeMounts:
            - name: adguard-home-data
              mountPath: /opt/adguardhome/work
            - name: adguard-home-config
              mountPath: /opt/adguardhome/config
      volumes:
        - name: adguard-home-data
          persistentVolumeClaim:
            claimName: adguard-home-data-pvc
        - name: adguard-home-config
          persistentVolumeClaim:
            claimName: adguard-home-config-pvc
