apps/adguard-home-test-1/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-service
  namespace: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http-setup
    - protocol: TCP
      port: 8088
      targetPort: 80
      name: http
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
    - protocol: TCP
      port: 853
      targetPort: 853
      name: dns-tls
    - protocol: UDP
      port: 784
      targetPort: 784
      name: dns-quic
  type: LoadBalancer
  externalTrafficPolicy: Local
  internalTrafficPolicy: Local
